--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1"
   
   "permissions": [
-	"https://www.google.com/"
+	"*://*.google.com/", "webRequest"
   ]
   
   "content_scripts": [
