--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "ProtoSound",
   "version": "0.1"
   
+  "browser_action": {
+	"default_icon": "icon.png",
+	"default_popup": "popup.html"
+  }
+  
   "permissions": [
 	"*://*.google.com/", "webRequest"
   ]
