--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   
   "browser_action": {
 	"default_icon": "icon.png",
-	"default_popup": "popup.html"
+	"default_popup": "popup.html",
+	"default_title": "Protosound"
   },
   
   "permissions": [
@@ -15,8 +16,12 @@
   "content_scripts": [
   	{
 	"matches": ["http://www.google.com/*"],
-	"js": ["protosound.js"]
+	"js": ["protosound.js"],
+	"run_at": "document_end"
   	}
-  
-  ]
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": true
+  }
 }
