--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,20 @@
 {
-  "manifest_version": 2,
   "name": "ProtoSound",
-  "version": "0.5",
+  "version": "1",
+  "description": "Plays background music from spotify based on keywords in search query",
   
   "browser_action": {
-	"default_icon": "icon.png",
-	"default_popup": "popup.html",
-	"default_title": "Protosound"
+    "default_icon": "icon.png",
+    "default_title": "ProtoSound"
   },
-  
+
   "permissions": [
-	"webRequest","*://*.google.com/"
+    "http://www.google.com/*", "https://www.google.com/*", "tabs"
   ],
-  
-  "content_scripts": [
-  	{
-	"matches": ["http://www.google.com/*"],
-	"js": ["protosound.js"],
-	"run_at": "document_end"
-  	}
-  ],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": true
-  }
+
+  "background":{
+    "scripts": ["background.js", "protosound.js"],
+    "persistent": false
+  },
+  "manifest_version": 2
 }
